--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Flipper  
+APP_NAME=Flipper
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:a1YQm4BgQCiX7O2VXKNxMfeC2JZHk8OTDkgR+I5QDPk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -27,12 +27,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=blog.flipper.vn@gmail.com
+MAIL_PASSWORD=tekbtzwlfszjianr
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=blog.flipper.vn@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
