--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=blog.flipper.vn@gmail.com
-MAIL_PASSWORD=tekbtzwlfszjianr
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=blog.flipper.vn@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
